--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ inflection==0.5.1
 packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 python-telegram-bot==21.4
 pytz==2024.1
 PyYAML==6.0.1
